codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__agent_rename_prefilled_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1798
expression: popup
---
▌ Rename agent
▌ Agent
▌
▌ Existing agent title

Press enter to confirm or esc to go back
