codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_spawn_completed_renders_requested_model_and_effort.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Spawned 019cff70 (gpt-5 high)
  └ Explore the repo
