codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: combined
---
• Agents finished
  └ Robie [explorer]: Completed - Done
    Ada [reviewer]: Running
